<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Discount Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="price">Listed Price</string>
    <string name="hint">Enter Listed Price</string>
    <string name="discount">Discount%</string>
    <string name="ten">10%</string>
    <string name="twenty5">25%</string>
    <string name="fifty">50%</string>
    <string name="custom">Custom</string>
    <string name="customvalue"></string>
    <string name="saved">You Saved</string>
    <string name="pay">You Pay</string>
    <string name="savezero">$ 0.00</string>
    <string name="payzero">$ 0.00</string>
    <string name="seekvalue">25%</string>
    <string name="exit">Exit</string>
    <item type="id" name="tag_discount"/>

</resources>
